--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgba(0, 153, 255, 0.301);
     width: 50%;
     margin: auto;
   }
+  
+  h1 {
+    font-family: cursive;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    border: 2px solid rgba(0,0,200, 0.6);
+    background-color: rgba(0,0,200,0.3);
+    color: rgba(0,0,200, 0.6);
+    box-shadow: 1px 1px 2px rgba(0,0,200, 0.4);
+    border-radius: 10px;
+    padding: 3px 10px;
+  }
+  
